--- a/html/web3.html
+++ b/html/web3.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width viewport-fit=cover, interactive-widget=resizes-content">
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="static/hst-min.css">
+    <link rel="stylesheet" href="static/app.css">
     <link rel="shortcut icon" type="image/png" href="static/favicon/180x180.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/16x16.png">
     <title>Web3 news</title>
     <script type="text/javascript" src="user/config.js"></script>
     <script type="text/javascript" src="static/cardano-min.js"></script>
-    <script type="text/javascript" src="static/hst-min.js"></script>
+    <script type="text/javascript" src="static/app.js"></script>
     <style id="ID_STYLE_THEME" type="text/css">
         .cprimebg {
             background-color: #F9F9F9;
